tests/fixtures/invalid/float_notin_int.py
# Cannot use 'not in' with Float and Int
x: bool = 1.0 not in 1
